@@ -4,7 +4,7 @@
 
 VALUE cTinyTdsClient;
 extern VALUE mTinyTds, cTinyTdsError;
-static ID sym_username, sym_password, sym_dataserver, sym_database, sym_appname, sym_tds_version, sym_login_timeout, sym_timeout, sym_encoding, sym_azure, sym_host, sym_port;
+static ID sym_username, sym_password, sym_dataserver, sym_database, sym_appname, sym_tds_version, sym_login_timeout, sym_timeout, sym_encoding, sym_azure;
 static ID intern_source_eql, intern_severity_eql, intern_db_error_number_eql, intern_os_error_number_eql;
 static ID intern_new, intern_dup, intern_transpose_iconv_encoding, intern_local_offset, intern_gsub;
 VALUE opt_escape_regex, opt_escape_dblquote;
@@ -237,7 +237,7 @@ static VALUE rb_tinytds_return_code(VALUE self) {
 
 static VALUE rb_tinytds_connect(VALUE self, VALUE opts) {
   /* Parsing options hash to local vars. */
-  VALUE user, pass, dataserver, database, app, version, ltimeout, timeout, charset, azure, host, port;
+  VALUE user, pass, dataserver, database, app, version, ltimeout, timeout, charset, azure;
   user = rb_hash_aref(opts, sym_username);
   pass = rb_hash_aref(opts, sym_password);
   dataserver = rb_hash_aref(opts, sym_dataserver);
@@ -248,8 +248,6 @@ static VALUE rb_tinytds_connect(VALUE self, VALUE opts) {
   timeout = rb_hash_aref(opts, sym_timeout);
   charset = rb_hash_aref(opts, sym_encoding);
   azure = rb_hash_aref(opts, sym_azure);
-  host = rb_hash_aref(opts, sym_host);
-  port = rb_hash_aref(opts, sym_port);
   /* Dealing with options. */
   if (dbinit() == FAIL) {
     rb_raise(cTinyTdsError, "failed dbinit() function");
@@ -280,13 +278,7 @@ static VALUE rb_tinytds_connect(VALUE self, VALUE opts) {
       rb_warn("TinyTds: Azure connections not supported in this version of FreeTDS.\n");
     #endif
   }
-  if (!NIL_P(dataserver)) {
-    cwrap->client = dbopen(cwrap->login, StringValuePtr(dataserver));
-  } else {
-    DBSETLSERVERPORT(cwrap->login, NUM2INT(port));
-    DBSETLSERVERNAME(cwrap->login, StringValuePtr(host));
-    cwrap->client = dbopen(cwrap->login, StringValuePtr(host));
-  }
+  cwrap->client = dbopen(cwrap->login, StringValuePtr(dataserver));
   if (cwrap->client) {
     cwrap->closed = 0;
     cwrap->charset = charset;
@@ -334,8 +326,6 @@ void init_tinytds_client() {
   sym_timeout = ID2SYM(rb_intern("timeout"));
   sym_encoding = ID2SYM(rb_intern("encoding"));
   sym_azure = ID2SYM(rb_intern("azure"));
-  sym_host = ID2SYM(rb_intern("host"));
-  sym_port = ID2SYM(rb_intern("port"));
   /* Intern TinyTds::Error Accessors */
   intern_source_eql = rb_intern("source=");
   intern_severity_eql = rb_intern("severity=");
