@@ -1,4 +1,9 @@
 
+* master *
+
+* New :host/:port connection options. Removes need for freetds.conf file.
+
+
 * 0.4.3 *
 
 * New Client#active? method to check for good connection. Always use this abstract method.
